# doru

./: CHANGELOG.MD  Cargo.toml  LICENSE  README.MD
.cargo/: config.toml
.github/workflows/: build.yml  post-release.yml  pr-main.yml
src/: lib.rs  main.rs  todo.rs  todo_manager.rs  todo_storage.rs
src/storage/: json_storage.rs  mod.rs  todo_storage.rs
