[package]
name = "doru"
version = "0.1.0"
edition = "2021"
description = "A simple library providing basic Todo functionality."
repository = "https://github.com/matej-almasi/doru"
readme = "README.MD"
license = "MIT OR Apache-2.0"
keywords = ["Todo"]

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2"

[dev-dependencies]
tempfile = "3.14.0"
